--- a/dev/main/blocks/about/about.pug
+++ b/dev/main/blocks/about/about.pug
@@ -12,7 +12,7 @@
 
 			+button({
 				"text": "Join Experiance"
-			})(class = "btn_color_main")
+			})(class = "btn_color_main about__btn")
 		.about__advantages.row
 			.about__advantage.advantage.advantage_black
 				div.advantage__icon.advantage__icon_star
@@ -27,18 +27,18 @@
 				span.advantage__icon.advantage__icon_loked
 					+icon('locked', 'color_main')
 				div.advantage__title Powerful security
-		section.about__num
+		section.about__numbers
 			h2.about__numTitle.title__main Here’re some impressive numbers about us
 			.numPanel
-				.numItem
+				.about__numItem.numItem
 					.numItem__val 7533
 					p.numItem__text.text Project Complate
-				.numItem
+				.about__numItem.numItem
 					.numItem__val 4222
 					p.numItem__text.text On Going Project
-				.numItem
+				.about__numItem.numItem
 					.numItem__val 6980 +
 					p.numItem__text.text Happy Client
-				.numItem
+				.about__numItem.numItem
 					.numItem__val 100%
 					p.numItem__text.text Positive Feedback
