--- a/dev/main/blocks/pricing/__plans/_plan.sass
+++ b/dev/main/blocks/pricing/__plans/_plan.sass
@@ -35,10 +35,11 @@
 
 
 	&__popular
-		position: absolute
-		top: 0
-		left: 0
-		transform: translateY(-100%)
+		// position: absolute
+		// top: 0
+		// left: 0
+		// transform: translateY(-100%)
+		display: block
 		width: 100%
 		+paddingEm(14px, 0, 14px, 0)
 		+fontEm(15px)
