--- a/dev/main/blocks/purchaseBlock/_purchaseBlock.sass
+++ b/dev/main/blocks/purchaseBlock/_purchaseBlock.sass
@@ -24,10 +24,14 @@
 	+sm-block
 		&__img
 			width: 50%
+			font-size: .7rem
 			position: absolute
 			top: 109px
 			right: 0
 			z-index: 1
+			+lg-block
+				font-size: .94rem
+
 
 			&::after
 				content: "O"
@@ -45,7 +49,7 @@
 				content: ""
 				display: block
 				width: 36.56em
-				height: 30.25em
+				height: 29em
 				max-height: 466px
 				position: absolute
 				z-index: 2
