--- a/dev/main/modules/header/_header.sass
+++ b/dev/main/modules/header/_header.sass
@@ -11,7 +11,8 @@
   &__navPanel
     +col
     +size-sm(9)
-    +paddingRem(0, 38px, 0, 38px)
+    +sm-block
+      +paddingRem(0, 38px, 0, 38px)
   &__nav
     position: absolute
     right: 0
