--- a/dev/main/blocks/pricing/__plans/plan.pug
+++ b/dev/main/blocks/pricing/__plans/plan.pug
@@ -1,6 +1,6 @@
 mixin plan(data)
 	each i in data
-		.pricing__plan.plan
+		.pricing__plan.plan(class=`pricing__plan_${i.header.name.toLowerCase()}`)
 			if i.header.name=="Premium"
 				span.plan__popular.text Most popular
 			header.plan__header(class=`plan__header_${i.header.name.toLowerCase()}`)
