--- a/dev/main/modules/button/_button.sass
+++ b/dev/main/modules/button/_button.sass
@@ -1,7 +1,9 @@
 .btn
-	min-width: 227px
-	min-height: 60px
-	+fontRem(18px)
+	// min-width: 227px
+	// min-height: 60px
+	+fontEm(18px)
+	min-width: 12.61em
+	min-height: 3.33em
 	font-family: $fontTitle
 	text-align: center
 	vertical-align: middle
@@ -19,9 +21,13 @@
 		text-transform: uppercase
 	&_size
 		&_s
-			min-width: 180px
-			min-height: 56px
+			// min-width: 180px
+			// min-height: 56px
+			min-width: 10em
+			min-height: 3.11em
 		&_xs
-			min-width: 127px
-			min-height: 40px
-			+fontRem(12px)
+			// min-width: 127px
+			// min-height: 40px
+			+fontEm(12px)
+			min-width: 10.58em
+			min-height: 3.33em
