--- a/dev/main/blocks/about/about.pug
+++ b/dev/main/blocks/about/about.pug
@@ -3,8 +3,8 @@
 		+title({
 				"main": "This is the one page polo",
 				"behind": "About"
-			})(class = "about__title")
-		.about__text.text.text_size_m Molestie ultricies quam. Donec at sem. Praesent pretium. Maorbi quis nulla vehicula felsd laoreet. Sed ullamcorper arcu ente. Sed tempus tempor cild  Nulla vierra ultrices magnal Nam rutrum congue diam.do eiusmod tempor incididunt ut dolore magna aliqua. Utdi eni ad minim veniam, quis nostrud exercitationconsequat. 
+			})(class = "about__title animated slideInDown" id="yourElement")
+		p.about__text.text.text_size_m.slideInDown#yourElement Molestie ultricies quam. Donec at sem. Praesent pretium. Maorbi quis nulla vehicula felsd laoreet. Sed ullamcorper arcu ente. Sed tempus tempor cild  Nulla vierra ultrices magnal Nam rutrum congue diam.do eiusmod tempor incididunt ut dolore magna aliqua. Utdi eni ad minim veniam, quis nostrud exercitationconsequat. 
 		.about__controls
 			+button({
 				"text": "More info"
