--- a/dev/main/blocks/form/_form.sass
+++ b/dev/main/blocks/form/_form.sass
@@ -7,7 +7,7 @@
 	background-size: cover
 
 	&__title
-		+marginRem(0, 0, 174px, 0)
+		+marginEm(0, 0, 174px, 0)
 		.title__behind
 			color: #e6e6e6
 	&__form
@@ -29,6 +29,7 @@
 	&__textarea
 		width: 100%
 		min-height: 18rem
+		overflow: auto
 		+sm-block
 			min-height: 31.8125rem
 
