--- a/dev/main/blocks/gallery/gallery.pug
+++ b/dev/main/blocks/gallery/gallery.pug
@@ -11,7 +11,7 @@ mixin portfolioPrev(name)
 					+icon("link-symbol")
 
 .portfolio
-	.portfolio__prev
+	.portfolio__prev#portfolio__prev
 		+portfolioPrev("Travel")
 		+portfolioPrev("Fashion")
 		+portfolioPrev("Fantasy")
