--- a/dev/main/blocks/purchaseBlock/purchaseBlock.pug
+++ b/dev/main/blocks/purchaseBlock/purchaseBlock.pug
@@ -11,16 +11,16 @@
 				ul.purchase__list.list.text.text_size_m
 					li.list__item
 						+icon('star', 'list__icon')
-						.list__text Responsive Design & Retina Ready.
+						p.list__text Responsive Design & Retina Ready.
 					li.list__item
 						+icon('star', 'list__icon')
-						.list__text Business Solution Any Company.
+						p.list__text Business Solution Any Company.
 					li.list__item
 						+icon('star', 'list__icon')
-						.list__text Powerful Admin Panel.
+						p.list__text Powerful Admin Panel.
 					li.list__item
 						+icon('star', 'list__icon')
-						.list__text 24/7 Support.
+						p.list__text 24/7 Support.
 				+button({
 						"text": "Purchase"
 					})(class = "purchase__btn btn_color_main btn_size_xs btn_textTransform")
