--- a/dev/main/blocks/team/_team.sass
+++ b/dev/main/blocks/team/_team.sass
@@ -1,7 +1,9 @@
 .team
-  +paddingRem(255px, 0, 336px, 0)
+  +paddingRem(125px, 0, 140px, 0)
+  +sm-block
+    +paddingRem(255px, 0, 336px, 0)
   &__title
-    +marginRem(0, 0, 128px, 0)
+    +marginEm(0, 0, 128px, 0)
   &__members
     justify-content: center
   &__member
