--- a/dev/main/modules/footer/_footer.sass
+++ b/dev/main/modules/footer/_footer.sass
@@ -3,7 +3,7 @@
 	text-align: center
 	background-color: $mainColorBlack
 	&__row
-		justify-content: space-between
+		justify-content: center
 	&__item
 		margin-bottom: 4em
 		+sm-block
@@ -13,22 +13,22 @@
 		+col()
 		+size(12)
 		+size-xs(6)
-		+size-sm(3)
+		+size-sm(4)
 		+sm-block
 			order: 1
 	&__social
 		+col()
-		+size(12)
-		+size-xs(10)
+		+size(10)
+		+size-xs(8)
 		+size-sm(4)
-		+paddingRem(16px, 36px, 0, 36px)
+		padding: 1rem 2% 0
 		+sm-block
 			order: 2
 	&__adress
 		+col()
 		+size(12)
 		+size-xs(6)
-		+size-sm(3)
+		+size-sm(4)
 		+sm-block
 			order: 3
 
