--- a/dev/main/blocks/purchaseBlock/_purchaseBlock.sass
+++ b/dev/main/blocks/purchaseBlock/_purchaseBlock.sass
@@ -14,7 +14,7 @@
 			+fontEm(72px)
 	&__promo
 		+col
-		+size-xs(12)
+		+size(12)
 		+size-sm(6)
 	//	+shift-lg-right(6)
 	&__text
@@ -24,15 +24,13 @@
 	+sm-block
 		&__img
 			width: 50%
-			font-size: .7rem
+			font-size: .6rem
 			position: absolute
 			top: 109px
 			right: 0
 			z-index: 1
 			+lg-block
 				font-size: .94rem
-
-
 			&::after
 				content: "O"
 				display: block
@@ -44,7 +42,6 @@
 				z-index: 1
 				line-height: .75
 				color: $mainColor
-
 			&::before
 				content: ""
 				display: block
@@ -58,7 +55,7 @@
 
 	.list
 		&__item
-			padding: 0.25em 0 0.25em 1.875rem
+			padding: 0.25em 1em 0.25em 1.875rem
 			position: relative
 		&__icon
 			width: 1em
