--- a/dev/main/css/main.css
+++ b/dev/main/css/main.css
@@ -77,7 +77,6 @@
 .subtitle {
   font-family: Montserrat-Bold, Arial, sans-serif;
   font-size: 1.125em;
-  font-weight: bold;
   text-transform: uppercase;
   color: #444444; }
   .subtitle_size_smaller {
@@ -110,6 +109,7 @@
   display: flex;
   text-align: center; }
   .nav__link {
+    display: inline-block;
     font-size: 0.875em;
     font-family: Montserrat-Light, Arial, sans-serif;
     text-transform: uppercase;
@@ -206,9 +206,20 @@
   font-size: 1.125em;
   min-width: 12.61em;
   min-height: 3.33em;
+  padding: 1em;
   font-family: Montserrat-Bold, Arial, sans-serif;
   text-align: center;
-  vertical-align: middle; }
+  vertical-align: middle;
+  border: 0 solid;
+  outline: 0 solid;
+  outline-color: rgba(0, 0, 0, 0.5);
+  outline-offset: 0px;
+  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1); }
+  .btn:hover {
+    border: 1px solid;
+    outline: 1px solid;
+    outline-color: transparent;
+    outline-offset: 15px; }
   .btn_color_main {
     background-color: #ffe400;
     color: #212121; }
@@ -242,22 +253,24 @@
   .title__main {
     width: 100%;
     font-size: 1.875em;
-    letter-spacing: .5px;
     font-family: Montserrat-Bold, Arial, sans-serif;
-    color: #444444;
-    font-weight: 900; }
+    color: #444444; }
     .title__main_pos_absolute {
       position: absolute;
       bottom: 0;
-      left: 50%;
-      transform: translate(-50%, 50%); }
+      transform: translateY(50%); }
       @media screen and (min-width: 780px) {
         .title__main_pos_absolute {
-          transform: translate(-50%, 0); } }
+          transform: translateY(0); } }
   .title__behind {
     font-size: 5.6875em;
     font-family: Montserrat-Black, Arial, sans-serif;
     color: #f0f0f0; }
+
+#yourElement {
+  animation-duration: 3s;
+  animation-delay: 2s;
+  animation-iteration-count: infinite; }
 
 .preloader {
   position: fixed;
@@ -318,8 +331,8 @@
   text-align: center;
   background-color: #212121; }
   .footer__row {
-    -ms-flex-pack: justify;
-        justify-content: space-between; }
+    -ms-flex-pack: center;
+        justify-content: center; }
   .footer__item {
     margin-bottom: 4em; }
     @media screen and (min-width: 780px) {
@@ -336,7 +349,7 @@
         width: calc(50% - 30px); } }
     @media screen and (min-width: 780px) {
       .footer__phone {
-        width: calc(25% - 30px); } }
+        width: calc(33.33333% - 30px); } }
     @media screen and (min-width: 780px) {
       .footer__phone {
         -ms-flex-order: 1;
@@ -346,11 +359,11 @@
     word-wrap: break-word;
     margin-left: 15px;
     margin-right: 15px;
-    width: calc(100% - 30px);
-    padding: 1rem 2.25rem 0 2.25rem; }
+    width: calc(83.33333% - 30px);
+    padding: 1rem 2% 0; }
     @media screen and (min-width: 560px) {
       .footer__social {
-        width: calc(83.33333% - 30px); } }
+        width: calc(66.66667% - 30px); } }
     @media screen and (min-width: 780px) {
       .footer__social {
         width: calc(33.33333% - 30px); } }
@@ -369,7 +382,7 @@
         width: calc(50% - 30px); } }
     @media screen and (min-width: 780px) {
       .footer__adress {
-        width: calc(25% - 30px); } }
+        width: calc(33.33333% - 30px); } }
     @media screen and (min-width: 780px) {
       .footer__adress {
         -ms-flex-order: 3;
@@ -394,6 +407,9 @@
   overflow: hidden;
   background-color: #fcfcfc;
   position: relative; }
+  @media screen and (min-width: 780px) {
+    .mainScreen {
+      padding: 31.4375rem 1.25rem 20.8125rem 1.25rem; } }
   .mainScreen::before {
     content: "O";
     display: block;
@@ -407,9 +423,6 @@
     @media screen and (min-width: 780px) {
       .mainScreen::before {
         font-size: 56.25rem; } }
-  @media screen and (min-width: 780px) {
-    .mainScreen {
-      padding: 31.4375rem 1.25rem 20.8125rem 1.25rem; } }
   @media screen and (min-width: 960px) {
     .mainScreen::after {
       content: "";
@@ -474,7 +487,7 @@
     display: block; }
 
 .about {
-  padding: 6.125rem 0 4.5625rem 0;
+  padding: 6.125rem 0 7.125rem 0;
   text-align: center;
   position: relative; }
   .about__title {
@@ -492,10 +505,9 @@
       .about__text {
         margin-left: calc(8.33333% + 15px); } }
   .about__controls {
-    margin: 0 0 5.1875rem 0; }
-  @media screen and (min-width: 498px) {
-    .about__btn:not(:last-child) {
-      margin-right: 30px; } }
+    margin: 0 0 4.25rem 0; }
+  .about__btn {
+    margin: 0 15px 15px; }
   .about__advantages {
     margin-bottom: 4.5rem;
     -ms-flex-pack: center;
@@ -518,8 +530,7 @@
     margin: 0 auto;
     padding-left: 20px;
     padding-right: 20px;
-    padding-top: 5.4rem;
-    padding-bottom: 2.5625rem; }
+    padding-top: 5.4rem; }
     @media screen and (min-width: 780px) {
       .about__numbers {
         padding-left: 15px;
@@ -560,7 +571,8 @@
     background-color: #ffe400; }
   .advantage__title {
     font-family: Montserrat-Bold, Arial, sans-serif;
-    font-size: 1.375em; }
+    font-size: 1.375em;
+    text-transform: capitalize; }
     .advantage__title_marg {
       margin-bottom: 1.272em; }
 
@@ -611,10 +623,8 @@
     box-sizing: border-box;
     word-wrap: break-word;
     margin-left: 15px;
-    margin-right: 15px; }
-    @media screen and (min-width: 560px) {
-      .purchase__promo {
-        width: calc(100% - 30px); } }
+    margin-right: 15px;
+    width: calc(100% - 30px); }
     @media screen and (min-width: 780px) {
       .purchase__promo {
         width: calc(50% - 30px); } }
@@ -625,7 +635,7 @@
   @media screen and (min-width: 780px) {
     .purchase__img {
       width: 50%;
-      font-size: .7rem;
+      font-size: .6rem;
       position: absolute;
       top: 109px;
       right: 0;
@@ -656,7 +666,7 @@
         background: url(../../static/img/general/manRun-581w.png) center top no-repeat;
         background-size: cover; } }
   .purchase .list__item {
-    padding: 0.25em 0 0.25em 1.875rem;
+    padding: 0.25em 1em 0.25em 1.875rem;
     position: relative; }
   .purchase .list__icon {
     width: 1em;
@@ -668,7 +678,10 @@
     fill: #757575; }
 
 .features {
-  padding: 7.875rem 0 10.5rem 0; }
+  padding: 6.875rem 0 8rem 0; }
+  @media screen and (min-width: 780px) {
+    .features {
+      padding: 7.875rem 0 10.5rem 0; } }
   .features__title {
     margin: 0 0 8.5625em 0; }
   .features__item {
@@ -676,16 +689,15 @@
     word-wrap: break-word;
     margin-left: 15px;
     margin-right: 15px;
-    margin-bottom: 4.25em; }
+    width: calc(100% - 30px); }
     @media screen and (min-width: 560px) {
-      .features__item {
-        width: calc(50% - 30px); } }
-    @media screen and (min-width: 780px) {
       .features__item {
         width: calc(50% - 30px); } }
     @media screen and (min-width: 960px) {
       .features__item {
         width: calc(33.33333% - 30px); } }
+    .features__item:not(:last-child) {
+      margin-bottom: 4.25em; }
 
 .feature {
   padding-left: 5.44em;
@@ -724,12 +736,17 @@
       flex-wrap: wrap; }
 
 .portfolioPrev {
-  -ms-flex: 1 320px;
-      flex: 1 320px;
-  height: 310px;
+  -ms-flex: 1 250px;
+      flex: 1 250px;
+  height: 250px;
   box-sizing: border-box;
   position: relative;
   overflow: hidden; }
+  @media screen and (min-width: 780px) {
+    .portfolioPrev {
+      -ms-flex: 1 320px;
+          flex: 1 320px;
+      height: 310px; } }
   .portfolioPrev_travel {
     background: url(../../static/img/content/portfolio/prev1-483w.jpg) bottom center no-repeat;
     background-size: cover; }
@@ -780,6 +797,7 @@
   .portfolioPrev__btn {
     width: 34px;
     height: 34px;
+    padding: 7px;
     border-radius: 100%;
     position: absolute;
     bottom: -22px;
@@ -870,9 +888,12 @@
   background-color: #ffe400; }
 
 .service {
-  padding: 10.0625rem 0 4.5rem 0;
+  padding: 8.125rem 0 4.5rem 0;
   position: relative;
   overflow: hidden; }
+  @media screen and (min-width: 560px) {
+    .service {
+      padding-top: 10.06rem; } }
   .service__title {
     margin: 0 0 6.375em 0;
     box-sizing: border-box;
@@ -891,6 +912,7 @@
     word-wrap: break-word;
     margin-left: 15px;
     margin-right: 15px;
+    width: calc(100% - 30px);
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
@@ -914,15 +936,16 @@
       .service__teamPhoto {
         display: inline-block; }
         .service__teamPhoto::before {
-          content: "O";
+          content: "";
           display: block;
-          font-family: Montserrat-Bold, Arial, sans-serif;
-          font-size: 75rem;
+          box-sizing: border-box;
+          width: 100%;
+          height: 120%;
+          border: 130px solid #ffe400;
+          border-radius: 50%;
           position: absolute;
-          left: -0.35em;
-          bottom: -0.17em;
-          line-height: .75;
-          color: #ffe400;
+          left: -40%;
+          bottom: -30%;
           opacity: .7;
           z-index: 2; } }
   .service__advantage {
@@ -965,10 +988,10 @@
     right: 0;
     background: url(../../static/img/general/pricingBg-1920w.jpg) center no-repeat;
     background-size: cover;
-    opacity: .55;
+    opacity: .3;
     mix-blend-mode: multiply; }
   .pricing__title {
-    margin: 0 0 11.375rem 0; }
+    margin: 0 0 11.375em 0; }
     .pricing__title .title__behind {
       color: #444444;
       opacity: .3; }
@@ -1024,8 +1047,10 @@
   .plan__popular {
     display: block;
     width: 100%;
-    padding: 0.875em 0 0.875em 0;
+    box-sizing: border-box;
+    padding: 0.875em 0.875em 0.875em 0.875em;
     font-size: 0.9375em;
+    text-transform: capitalize;
     background-color: #e6e6e6; }
   .plan__title {
     font-size: 0.9375em;
@@ -1066,7 +1091,7 @@
     margin-bottom: 4px;
     background-color: #fff; }
   .plan__item {
-    padding: 1.375em 0 1.375em 0;
+    padding: 1.375em 1.375em 1.375em 1.375em;
     color: #808080; }
   .plan__item:not(:last-child) {
     border-bottom: 1px solid #f0f0f0; }
@@ -1081,16 +1106,20 @@
   .plan__btn {
     display: block;
     width: 100%;
-    padding: 1.125em 0 1em 0;
+    padding: 1.125em 1em 1em 1em;
     font-size: 0.875rem;
     font-family: Montserrat-Bold, Arial, sans-serif;
+    text-transform: capitalize;
     color: #444444;
     background-color: #fff; }
 
 .team {
-  padding: 15.9375rem 0 21rem 0; }
+  padding: 7.8125rem 0 8.75rem 0; }
+  @media screen and (min-width: 780px) {
+    .team {
+      padding: 15.9375rem 0 21rem 0; } }
   .team__title {
-    margin: 0 0 8rem 0; }
+    margin: 0 0 8em 0; }
   .team__members {
     -ms-flex-pack: center;
         justify-content: center; }
@@ -1133,15 +1162,28 @@
     width: 100%;
     height: auto; }
   .member__details {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 4em 1.5em 0 1.5em;
+    font-size: .9rem;
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
-    padding: 6em 1.5em 0 1.5em;
     text-align: center;
     background-color: #ffe400;
     color: #000;
     display: none; }
+    @media screen and (min-width: 560px) {
+      .member__details {
+        font-size: 1rem; } }
+    @media screen and (min-width: 780px) {
+      .member__details {
+        padding-top: 6em; } }
   .member__detailsName, .member__detailsPos {
     margin-bottom: 0.71em;
     font-family: Montserrat-Bold, Arial, sans-serif;
@@ -1151,23 +1193,20 @@
   .member__detailsPos {
     font-size: 1em; }
   .member__detailsText {
-    margin: 4.71em 0;
+    margin: auto;
     padding: 0 0.875em;
     font-family: Muli, Arial, sans-serif;
     line-height: 1.75;
     font-size: 0.875em; }
   .member__detailsSocial {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding: 2.5rem 2.125rem 3.125rem 2.125rem;
+    padding: 2.5rem 2% 3.125rem;
     border-top: 1px dashed #b7b7b7; }
   .member__socialLink {
     fill: rgba(0, 0, 0, 0.5); }
 
 .member:hover .member__details {
-  display: block; }
+  display: -ms-flexbox;
+  display: flex; }
 
 .contactBlock {
   padding: 7.5rem 0 8.125rem 0;
@@ -1177,7 +1216,7 @@
   background-repeat: no-repeat;
   background-size: cover; }
   .contactBlock__title {
-    margin: 0 0 10.875rem 0; }
+    margin: 0 0 10.875em 0; }
     .contactBlock__title .title__behind {
       color: #e6e6e6; }
   .contactBlock__form {
@@ -1213,7 +1252,8 @@
 
 .form__textarea {
   width: 100%;
-  min-height: 18rem; }
+  min-height: 18rem;
+  overflow: auto; }
   @media screen and (min-width: 780px) {
     .form__textarea {
       min-height: 31.8125rem; } }
