--- a/dev/main/index.pug
+++ b/dev/main/index.pug
@@ -39,7 +39,7 @@ block content
 mixin icon(name,mod)
 	- mod = mod || ''
 	svg(class="icon icon-" + name + ' ' + mod)
-		use(xlink:href="../static/img/svg/symbol/sprite.svg#" + name)
+		use(xlink:href="static/img/svg/symbol/sprite.svg#" + name)
 
 
 
