--- a/dev/main/modules/button/_button.sass
+++ b/dev/main/modules/button/_button.sass
@@ -4,9 +4,21 @@
 	+fontEm(18px)
 	min-width: 12.61em
 	min-height: 3.33em
+	padding: 1em
 	font-family: $fontTitle
 	text-align: center
 	vertical-align: middle
+	border: 0 solid
+	outline: 0 solid
+	outline-color: rgba(0, 0, 0, .5)
+	outline-offset: 0px
+	transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1)
+	&:hover
+		border: 1px solid
+		outline: 1px solid
+		outline-color: rgba(0, 0, 0, 0)
+		outline-offset: 15px
+
 	&_color
 		&_main
 			background-color: $mainColor
