--- a/dev/main/modules/menu/_menu.sass
+++ b/dev/main/modules/menu/_menu.sass
@@ -2,6 +2,7 @@
   display: flex
   text-align: center
   &__link
+    display: inline-block
     +fontEm(14px)
     font-family: $fontLight
     text-transform: uppercase
